# sources-mems-rosco

./: CMakeLists.txt  CPackConfig.cmake  Lizens.txt  Makefile  README.TXT  README.md  Transfile_de.ts  Transfile_ge.ts  aboutbox.cpp  aboutbox.h  commonunits.h  dirview.cpp  global.cpp  global.h  help.html  help.html.in  helpviewer.cpp  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.txt  mainwindow.ui  manometer.h  mems-rosco.cbp  memsgauge.includes  memsinterface.cpp  memsinterface.h  mytreewidget.cpp  mytreewidget.h  optionsdialog.cpp  optionsdialog.h  plotwindow.cpp  plotwindow.h  qcustomplot.cpp  resources.qrc  rosco.h  serialdevenumerator.cpp  transfile_en.ts  (+6 more)
lib/: librosco.so.2  librosco.so.2.0.0
qledindicator/: qledindicator.cpp
